--- a/src/styles/socials.module.scss
+++ b/src/styles/socials.module.scss
@@ -11,7 +11,7 @@
 
   a {
     margin: 0 0;
-    z-index: 100;
+    z-index: 1;
   }
 
   &.dark {
